--- a/src/api/app/views/shared/_repositories.html.erb
+++ b/src/api/app/views/shared/_repositories.html.erb
@@ -1,28 +1,1 @@
-<div class="clearfix">
-  <div style="min-width: 50%; float: left">
-    <h3>Build Flag <%= image_tag 'ajax-loader.gif', id: 'spinner_flag_table_build', class: 'spinner hidden' %>
-      <span id='error_flag_table_build' class='flagerror'></span></h3>
-    <%= render partial: 'shared/repositories_flag_table', locals: { flags: @build, flag_type: 'build' } %>
-  </div>
-  <div style="min-width: 50%; float: left">
-    <h3>Publish Flag <%= image_tag 'ajax-loader.gif', id: 'spinner_flag_table_publish', class: 'spinner hidden' %>
-      <span id='error_flag_table_publish' class='flagerror'></span></h3>
-    <%= render partial: 'shared/repositories_flag_table', locals: { flags: @publish, flag_type: 'publish' } %>
-  </div>
-</div>
-
-<div class="clearfix">
-  <div style="min-width: 50%; float: left;">
-    <h3>Debuginfo
-      Flag <%= image_tag 'ajax-loader.gif', id: 'spinner_flag_table_debuginfo', class: 'spinner hidden' %>
-      <span id='error_flag_table_debuginfo' class='flagerror'></span></h3>
-    <%# FIXME: That debuginfo is disabled is an application wide default hidden in some view. %>
-    <%= render partial: 'shared/repositories_flag_table', locals: { flags: @debuginfo, flag_type: 'debuginfo', disable: true } %>
-  </div>
-  <div style="min-width: 50%; float: left">
-    <h3>Use for Build
-      Flag <%= image_tag 'ajax-loader.gif', id: 'spinner_flag_table_useforbuild', class: 'spinner hidden' %>
-      <span id='error_flag_table_useforbuild' class='flagerror'></span></h3>
-    <%= render partial: 'shared/repositories_flag_table', locals: { flags: @useforbuild, flag_type: 'useforbuild' } %>
-  </div>
-</div>
+<%= debug(PP.pp(@blah, "")) %>
